# dex-arbitrage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FLASH_LOAN_FLEXIBLE_START_END_PLAN.md  FLEXIBLE_START_END_ANALYSIS.md  IMPLEMENTATION_NOTES.md  Makefile  PHASE2_IMPLEMENTATION_COMPLETE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_AND_ALCHEMY_COST_REPORT.md  README.md  checklist.md  deny.toml  docker-compose.yml  foundry.toml  markdown.md  revised_dex_arb_design.md
.github/workflows/: ci.yml
config/: avalanche.toml  base.live.backup.toml  base.test.toml  base.toml  bsc.toml  celo.toml  gnosis.toml  linea.toml  polygon.toml  sonic.toml
contracts/: ArbitrageExecutor.sol
contracts/interfaces/: IAavePool.sol  IAerodromeV2Pool.sol  IArbitrageExecutor.sol  IBalancerPool.sol  IBalancerVault.sol  ICurvePool.sol  IFlashLoanSimpleReceiver.sol  ITraderJoeLBPair.sol  IUniswapV2Pair.sol  (+2 more)
docs/: SECURITY.md  avalanche-live-setup.md  base-live-env-a-to-z.md  base-live-setup-progress.md  base-provider-compare.md  polygon-live-env-a-to-z.md
examples/: detector_experiment.rs
monitoring/: prometheus.yml
scripts/: check_env.sh  compare_base_providers.py  compare_candidate_algorithms.py  deploy_avalanche.sh  deploy_base.sh  deploy_polygon.sh  replay_avalanche_route.py  run_avalanche.sh  run_base.sh  run_polygon.sh  scout_chains.py
src/: abi.rs  config.rs  engine.rs  lib.rs  main.rs  types.rs
tests/: amm_math_tests.rs  capital_selector_tests.rs  detector_tests.rs  graph_tests.rs  quantity_search_tests.rs  risk_tests.rs  rpc_policy_tests.rs
(+49 files in other folders)
