
[package]
name = "dex-arbitrage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "dex_arbitrage"
path = "src/lib.rs"

[[bin]]
name = "dex-arbitrage"
path = "src/main.rs"

[dependencies]
alloy = { version = "1", features = ["full"] }
alloy-flashblocks = "0.1"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
